# wood-coal-pizza

./: .gitignore  LICENSE  METHODOLOGY.md  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: live-ranking.yml  pages.yml  tests.yml
data/processed/: map_sample.html  ranking_sample.csv  restaurants_sample.csv  summary_sample.json
data/sample/: sample_census.json  sample_osm.json
results/: ranking.csv  restaurants.csv  summary.json
src/wcpizza/: __init__.py  classify.py  config.py  dedupe.py  map.py  pipeline.py  rank.py  utils.py
src/wcpizza/sources/: __init__.py  census.py  osm.py  website.py
tests/: test_classify.py  test_dedupe.py  test_map.py  test_pipeline_integration.py  test_rank.py
