[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wcpizza"
version = "0.1.0"
description = "Estimate which U.S. city has the most wood/coal-fired pizza restaurants per capita, from public data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["requests>=2.28,<3", "PyYAML>=6.0,<7"]

[project.scripts]
wcpizza = "wcpizza.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
